# degreezeor

./: .gitignore  README.md  degreezeor.db  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1fde4747e043_baseline_schema.py  8c5a96609f70_add_hot_path_indexes.py  b1a2c3d4e5f6_add_bill_cosponsors.py  c2b3d4e5f6a7_votes_standalone_rollcalls.py  d3c4e5f6a7b8_add_official_in_office.py  e4f5a6b7c8d9_add_analytics_events.py
docs/: DEPLOY.md  METHODOLOGY.md  OUTREACH.md  WHITEPAPER.md
scripts/: build_docs_pdf.py
src/degreezeor/: __init__.py  analytics.py  categories.py  cli.py  config.py  disputes.py  integrity.py  pipeline.py  provenance.py
src/degreezeor/api/: __init__.py  app.py  graph.py  (+1 more)
tests/: conftest.py  test_analytics.py  test_attribution.py  test_audit.py  test_categories.py  test_cdc.py  test_census_eia.py  test_comparison_baselines.py  test_confidence.py  test_coverage.py  test_disputes.py  test_graph.py  test_hashing.py  test_health_education_adapters.py  test_house_votes.py  test_integration.py  test_integrity.py  test_migrations.py  test_objective_mapping.py  test_outcome.py  test_party_blindness.py  test_pipeline_live.py  test_reference_presidents.py  test_refresh_integrity.py  test_reproducibility.py  test_rollup.py  test_score_assembly.py  test_senate_votes.py  test_sensitivity.py  test_share_og.py  test_source_trail_integrity.py  test_state_policy_specs.py  test_target_outcome.py  test_web_assets.py
tests/fixtures/: senate_vote_111_1_00064.xml
web/: app.js  config.js  index.html  styles.css
(+38 files in other folders)
